# Canvas-To-ToDoList

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  gui.py  integration.py  main.py
